testsuite/poke.pkl/arrays-diag-3.pk
/* { dg-do compile } */

var a = [0,1,.[1-2]=10]; /* { dg-error "negative" } */
